--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ Hello World
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
   eum fugiat quo voluptas nulla pariatur?</p>
-
+<p>
+  <em>Hello World!</em>
+  <strong>Warning!</strong>
+</p>
 </body>
 </html>
