Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Hello World
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
   eum fugiat quo voluptas nulla pariatur?</p>
 <p>
-  <em>Hello World!</em>
-  <strong>Warning!</strong>
+  <b>Hello World!</b>
+  <i>Warning!</i>
 </p>
 </body>
 </html>
